te drukken versie

--- a/besluit.tex
+++ b/besluit.tex
@@ -30,3 +30,6 @@ gevalstudies is, is dat als we een kleine toegeving doen op de precisie van de
 types, we af en toe een grote vermindering van inspanning kunnen krijgen. En
 zolang de meeste eigenschappen nog in het typesysteem uitgedrukt zijn, kunnen
 we die uit ons hoofd zetten en nadenken over belangrijkere problemen.
+
+Alle code die besproken is, is beschikbaar in de bijlagen alsook op het
+internet \url{https://github.com/toonn/pbdtt}.
