--- a/ch-case-koopatroopas.tex
+++ b/ch-case-koopatroopas.tex
@@ -807,7 +807,7 @@ voordat dit het geval is. Ook is een ontwikkeling als het singleton package
 vereenvoudiging kunnen zorgen wat de veelheid aan types betreft die we
 momenteel nodig hebben.
 
-De code voor dit hoofdstuk is in zijn geheel terug te vinden in appendices
+De code voor dit hoofdstuk is in zijn geheel terug te vinden in bijlagen
 \ref{app:case-koopa-agda} en \ref{app:case-koopa-haskell}. In het volgende
 hoofdstuk bekijken we een tweede gevalstudie waar we de tekortkomingen van
 Haskell tegenover volwaardige dependent types op een andere manier oplossen.
