--- a/ch-case-redblacktrees.tex
+++ b/ch-case-redblacktrees.tex
@@ -425,6 +425,6 @@ McBride \cite{hkynio} met de titel: "How to Keep Your Neighbours in Order."
 In dit artikel formuleert McBride een elegante en heel erg algemene
 voorstelling voor geördende bomen en andere datastructuren.
 
-De volledige code voor dit hoofdstuk is terug te vinden in appendices
+De volledige code voor dit hoofdstuk is terug te vinden in bijlagen
 \ref{app:case-rbtree-agda} en \ref{app:case-rbtree-haskell}.
 In het volgende hoofdstuk zien we nog een besluit over het geheel.
