--- a/masterproef.tex
+++ b/masterproef.tex
@@ -15,7 +15,7 @@ assistant={Jesper Cockx}}
     reliance on test suites by encoding simple properties in your types.}}
 
 % TODO: toggle voor gedrukte versie?
-\usepackage[pdfusetitle,colorlinks,plainpages=false]{hyperref}
+\usepackage[pdfusetitle,colorlinks,linkcolor=black,citecolor=black,urlcolor=black,plainpages=false]{hyperref}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
